[package]
name = "zzk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
csv = "1.3.0"
humantime = "2.1.0"
stringreader = "0.1.1"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
